Fix padding issue on mobile

--- a/BrokkAndOdin/Content/site.scss
+++ b/BrokkAndOdin/Content/site.scss
@@ -27,4 +27,8 @@ body {
     .hidden-for-mobile{
         display: none;
     }
+
+    .search-box{
+        padding-left: 26px;
+    }
 }
